// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots prenda-spark/Radio Basic Radio Button 1`] = `
<label
  className="MuiFormControlLabel-root"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiRadio-root MuiRadio-colorSecondary makeStyles-radioRoot-1 MuiIconButton-colorSecondary"
    label="Basic Radio Button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        className="PrivateSwitchBase-input-8"
        name="basicRadio"
        onChange={[Function]}
        type="radio"
        value="basic"
      />
      <span
        className="makeStyles-radio-2"
      />
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
  >
    <span
      className="makeStyles-label-4"
    >
      Basic Radio Button
    </span>
  </span>
</label>
`;

exports[`Storyshots prenda-spark/Radio Checked Radio Button 1`] = `
<label
  className="MuiFormControlLabel-root"
>
  <span
    aria-disabled={false}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiRadio-root MuiRadio-colorSecondary makeStyles-radioRoot-9 PrivateSwitchBase-checked-14 Mui-checked MuiIconButton-colorSecondary"
    label="Checked Radio Button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={null}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        checked={true}
        className="PrivateSwitchBase-input-16"
        name="checkedRadio"
        onChange={[Function]}
        type="radio"
        value="checked"
      />
      <span
        className="makeStyles-radio-10"
      >
        <span
          className="makeStyles-checkedRadioCenter-11"
        />
      </span>
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
  >
    <span
      className="makeStyles-label-12"
    >
      Checked Radio Button
    </span>
  </span>
</label>
`;

exports[`Storyshots prenda-spark/Radio Disabled Radio Button 1`] = `
<label
  className="MuiFormControlLabel-root Mui-disabled"
>
  <span
    aria-disabled={true}
    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-21 MuiRadio-root MuiRadio-colorSecondary makeStyles-radioRoot-17 PrivateSwitchBase-disabled-23 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
    label="Disabled Radio Button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
  >
    <span
      className="MuiIconButton-label"
    >
      <input
        className="PrivateSwitchBase-input-24"
        disabled={true}
        name="disabledRadio"
        onChange={[Function]}
        type="radio"
        value="disabled"
      />
      <span
        className="makeStyles-radio-18"
      />
    </span>
  </span>
  <span
    className="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
  >
    <span
      className="makeStyles-label-20"
    >
      Disabled Radio Button
    </span>
  </span>
</label>
`;
